# pico-examples

PIO-basic/: CMakeLists.txt  blink.pio  main.c
SPI_multicore/: CMakeLists.txt  spi_multicore.c
blink/: CMakeLists.txt  main.c
hello_world/: CMakeLists.txt  main.c
multicore/: CMakeLists.txt  multicore.c
multicore_blink/: CMakeLists.txt  multicore_blink.c
print-prime/: CMakeLists.txt  main.c
spi_master/: CMakeLists.txt  main.c
spi_slave/: CMakeLists.txt  main.c
